--- a/1.07_activity_4.md
+++ b/1.07_activity_4.md
@@ -1,6 +1,6 @@
 # 1.07 Activity 4
 
-Refer to the file `files_for_activities/regression_data.csv` for this exercise.
+Keep using the same file (`files_for_activities/regression_data.csv`) for this exercise.
 
 1. Load data `regression_data.csv`.
 2. Select 3 numeric columns.
